--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <textarea class="row" disabled>background: linear-gradient(to left top, #977DFE, #6878FF);</textarea>
         <div class="row buttons">
-            <button class="refresh">Refresh Colors</button>
+            <button class="refresh">Generate Colors</button>
             <button class="copy">Copy Code</button>
         </div>
     </div>
