--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <option value="to bottom">Bottom</option>
                         <option value="to left bottom">Left bottom</option>
                         <option value="to left">Left</option>
-                        <option value="to left top">Left Top</option>
+                        <option selected value="to left top">Left top</option>
                     </select>
                 </div>
             </div>
