default color inputs

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <div class="column colors">
                 <p>Colors</p>
                 <div class="inputs">
-                    <input type="color" value="#5665E9">
-                    <input type="color" value="#A271F8">
+                    <input type="color" value="#977DFE">
+                    <input type="color" value="#6878FF">
                 </div>
             </div>
         </div>
